<resources>
    <string name="app_name">Kuhu</string>
    <string name="storyboardone">Find Your Perfect Match</string>
    <string name="storyboard2">Revitalize Your Marriage</string>
    <string name="storyboard3">Forever And Always, Together As One</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="marriage_made_easy">Marriage Made Easy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back_now_let_s_build_your_profile">Welcome back ! Now let\'s build Your Profile</string>
    <string name="division_you_live_in">Division You Live in</string>
    <string name="marital_status">Marital Status</string>
    <string name="your_diet">Your Diet</string>
    <string name="your_religion">Your Religion</string>
    <string name="continue_text">Continue</string>
    <string name="just_a_few_steps_more_please_add_education_and_career_details">Just a few steps more! Please add education and Career details</string>
    <string name="city_you_live_in">City you live in</string>
    <string name="your_higher_qualification">Your higher qualification</string>
    <string name="your_job_type">Your job type</string>
    <string name="you_work_as">You work as</string>
    <string name="your_annual_income">Your annual income</string>
    <string name="home">Home</string>
    <string name="match">Match</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="send_interest">Send Interest</string>
    <string name="chat_now">Chat Now</string>
    <string name="discover_matches">Discover Matches</string>
    <string name="location">Location</string>
    <string name="profession">Profession</string>
    <string name="matches">Matches</string>
    <string name="notification">Notification</string>
    <string name="subscription_plus">Subscription Plus</string>
    <string name="settings">Settings</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Condition]]></string>
    <string name="log_out">Log Out</string>
    <string name="email_address">Email Address</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_a_one_time_password">We will send you a one time password</string>
    <string name="get_otp">GET OTP</string>
    <string name="enter_six_digit_otp">Enter six digit OTP</string>
    <string name="your_gender">Your Gender</string>
    <string name="district_you_live_in">District You Live in</string>
    <string name="personal_information">Personal Information</string>
    <string name="a_few_lines_about_me">A Few Lines About Me</string>
    <string name="basic_details">Basic Details</string>
    <string name="name">Name</string>
    <string name="dash">-</string>
    <string name="proloy_chandra_deb">Proloy Chandra Deb</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="religion">Religion</string>
    <string name="status">Status</string>
    <string name="dob">DOB</string>
    <string name="habits">Habits</string>
    <string name="drinking">Drinking</string>
    <string name="diet">Diet</string>
    <string name="smoking">Smoking</string>
    <string name="hobbies">Hobbies</string>
    <string name="family_details">Family Details</string>
    <string name="father_name">Father Name</string>
    <string name="mother_name">Mother Name</string>
    <string name="designation">Designation</string>
    <string name="company_name">Company Name</string>
    <string name="annual_income">Annual Income</string>
    <string name="search_profile">Search Profile</string>
    <string name="your_full_name">Your Full Name</string>
    <string name="accept_request">Accept Request</string>
    <string name="decline">Decline</string>
    <string name="decline_request">Decline Request</string>
    <string name="chats">Chats</string>
    <string name="request_accepted">Request Accepted</string>
    <string name="message">Message</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="profile_view">Profile View</string>
    <string name="sort_by">Sort By</string>
    <string name="filter">Filter</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="district">District</string>
    <string name="education">Education</string>
    <string name="new_matches">New Matches</string>
    <string name="some_members_looking_for_you">Some Members Looking For You</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="subscribe">Subscribe</string>
    <string name="you_are_subscribed">You are subscribed</string>
    <string name="you_are_unsubscribed">You are unsubscribed</string>
    <string name="shortlist">ShortList</string>
    <string name="chatnow">ChatNow</string>
    <string name="bdapps">Bdapps</string>
    <string name="a_confirmation_will_come_to_your_mobile">A confirmation will come to your mobile</string>
    <string name="bkash">Bkash</string>
    <string name="press_subscribe_to_pay_monthly_fee_to_see_full_profile">Press Subscribe To Pay Monthly Fee, To See Full Profile</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="please_check_your_spam_folder_of_email">Please Check Your Spam Folder Of Email</string>
    <string name="click_to_upload">Click To Upload</string>
    <string name="you_can_buy_monthly_package_only_at_50BDT">You can buy monthly package only at 50BDT</string>

    <array name="spinner_division">
        <item>Dhaka</item>
        <item>Chattogram</item>
        <item>Khulna</item>
        <item>Rajshahi</item>
        <item>Barishal</item>
        <item>Mymensingh</item>
        <item>Sylhet</item>
        <item>Rangpur</item>
        <!-- Add more items as needed -->
    </array>

    <string-array name="spinner_relgion">
        <item>Islam</item>
        <item>Hindu</item>
        <item>Buddhist</item>
        <item>Christian</item>
        <!-- Add more items as needed -->
    </string-array>

    <string-array name="spinner_marital_status">
        <item>Single</item>
        <item>Married</item>
        <item>Divorced</item>
        <item>Widow</item>
        <item>Widower</item>
        <!-- Add more items as needed -->
    </string-array>

    <string-array name="spinner_gender">
        <item>Male</item>
        <item>Female</item>
        <item>Rather Not To Say</item>
        <!-- Add more items as needed -->
    </string-array>

    <string-array name="spinner_job">
        <item>Student</item>
        <item>Govt. Job</item>
        <item>Private Job</item>
        <item>Business</item>
        <!-- Add more items as needed -->
    </string-array>

    <string-array name="spinner_district">
        <item>Dhaka</item>
        <item>Gazipur</item>
        <item>Manikganj</item>
        <item>Munshiganj</item>
        <item>Narayanganj</item>
        <item>Narsingdi</item>
        <item>Tangail</item>
        <item>Faridpur</item>
        <item>Gopalganj</item>
        <item>Madaripur</item>
        <item>Rajbari</item>
        <item>Shariatpur</item>
        <item>Kishoreganj</item>
        <item>Barisal</item>
        <item>Barguna</item>
        <item>Bhola</item>
        <item>Jhalokati</item>
        <item>Patuakhali</item>
        <item>Pirojpur</item>
        <item>Bandarban</item>
        <item>Brahmanbaria</item>
        <item>Chandpur</item>
        <item>Chattogram</item>
        <item>Cox Bazar</item>
        <item>Cumilla</item>
        <item>Feni</item>
        <item>Khagrachhari</item>
        <item>Lakshmipur</item>
        <item>Noakhali</item>
        <item>Rangamati</item>
        <item>Habiganj</item>
        <item>Moulvibazar</item>
        <item>Sunamganj</item>
        <item>Sylhet</item>
        <item>Bagerhat</item>
        <item>Chuadanga</item>
        <item>Jashore</item>
        <item>Jhenaidah</item>
        <item>Khulna</item>
        <item>Kushtia</item>
        <item>Magura</item>
        <item>Meherpur</item>
        <item>Narail</item>
        <item>Satkhira</item>
        <item>Jamalpur</item>
        <item>Mymensingh</item>
        <item>Netrokona</item>
        <item>Sherpur</item>
        <item>Bogura</item>
        <item>Joypurhat</item>
        <item>Naogaon</item>
        <item>Natore</item>
        <item>Chapainawabganj</item>
        <item>Pabna</item>
        <item>Rajshahi</item>
        <item>Sirajganj</item>
        <item>Dinajpur</item>
        <item>Gaibandha</item>
        <item>Kurigram</item>
        <item>Lalmonirhat</item>
        <item>Nilphamari</item>
        <item>Panchagarh</item>
        <item>Rangpur</item>
        <item>Thakurgaon</item>
        <item>Habiganj</item>
        <item>Sylhet</item>
    </string-array>

</resources>