<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:src="@drawable/ic_login_gmail"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textColor="@color/big_bold_text_color"
                    android:text="@string/otp_verification"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textColor="@color/primary"
                    android:text="@string/we_will_send_you_a_one_time_password"/>

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etLoginEmail"
                    android:layout_marginTop="20dp"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:hint="@string/email_address"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:background="@drawable/oval_editttext"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/get_otp"
                    android:id="@+id/btnLoginGetOtp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/primary"
                    android:background="@drawable/oval_editttext"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </RelativeLayout>
    </RelativeLayout>

</layout>