<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Mini navbar -->
        <LinearLayout
            android:id="@+id/mini_navbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bdappscolor"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nav_item_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18dp"
                android:textStyle="bold"
                android:padding="5dp"
                android:textColor="@color/white"
                android:text="@string/bkash" />

            <!-- Add more items if necessary -->
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mini_navbar"
            android:padding="20dp">

            <!-- Mobile number input field -->
            <!--<androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etBdappsMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLines="1"
                android:hint="@string/enter_mobile_number"
                android:inputType="phone"
                android:layout_marginTop="20dp"/>-->

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etBdappsMobileNumber"
                android:textColor="@color/big_bold_text_color"
                android:gravity="center"
                android:textSize="16dp"
                android:text="@string/press_subscribe_to_pay_monthly_fee_to_see_full_profile"/>

            <!-- Subscribe button -->
            <Button
                android:id="@+id/btnBdAppsSubscribeCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etBdappsMobileNumber"
                android:layout_alignParentStart="true"
                android:text="@string/cancel"
                android:layout_marginTop="20dp"/>

            <!-- Cancel button -->
            <Button
                android:id="@+id/btnBdAppsSubscribe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etBdappsMobileNumber"
                android:layout_alignParentEnd="true"
                android:text="@string/subscribe"
                android:layout_marginTop="20dp"/>

        </RelativeLayout>

    </RelativeLayout>

</layout>